--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/decardo
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+
+spring.datasource.url=jdbc:postgresql://tiny.db.elephantsql.com:5432/azrnhqjh
+spring.datasource.username=azrnhqjh
+spring.datasource.password=diOo1bgezEs7gQmtu8PpJl_FCjk_QJbd
+#spring.datasource.url=jdbc:postgresql://localhost:5432/decardo
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
 
 decardo.app.jwtCookieName=decardoJwt
 decardo.app.jwtSecret=MmZNa2JKYkNxTFZXbWtZNWVUcTVmM3dHdEU0YlNwTXE=
 decardo.app.jwtExpirationMs=86400000
-#
-#amazonProperties.endpointUrl=https://artgallery-bucket.s3.eu-central-1.amazonaws.com
-#amazonProperties.accessKey=AKIAUKGUJBQZEXUAJE6O
-#amazonProperties.secretKey=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
-#amazonProperties.bucketName=artgallery-bucket
-#amazonProperties.region=eu-central-1
 
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
