update configuration FirebaseStorageService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=${PORT:8080}
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/decardo}
 spring.datasource.username=${DATABASE_USERNAME:postgres}
 spring.datasource.password=${DATABASE_PASSWORD:postgres}
@@ -10,5 +13,4 @@ decardo.app.jwtCookieName=decardoJwt
 decardo.app.jwtSecret=${JWT_SECRET:MmZNa2JKYkNxTFZXbWtZNWVUcTVmM3dHdEU0YlNwTXE=}
 decardo.app.jwtExpirationMs=86400000
 
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
+firebase.config.json=${FIREBASE_CONFIG}
